<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ScheduleFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_previous_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Предыдущий_месяц"
                android:padding="8dp"
                android:src="@drawable/ic_chevron_left" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_month_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="?attr/colorOnSurface"
                tools:text="Июль 2025" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_next_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/Следующий_месяц"
                android:padding="8dp"
                android:src="@drawable/ic_chevron_right" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_days_of_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/ПН" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/ВТ" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/СР" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/ЧТ" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/ПТ" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/СБ" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/DayOfWeek"
            android:text="@string/ВС" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:alpha="0.2"
            android:background="@color/custom_black_white"
            android:forceDarkAllowed="false" />

    </LinearLayout>

    <com.kizitonwose.calendar.view.CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cv_daySize="seventhWidth"
        app:cv_dayViewResource="@layout/calendar_day_layout"
        app:cv_orientation="horizontal"
        app:cv_outDateStyle="endOfGrid"
        app:cv_scrollPaged="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_days_of_week" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/custom_black_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_appointments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingVertical="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        tools:listitem="@layout/item_appointment" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_add_appointment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/Добавить_запись"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/custom_main" />

</androidx.constraintlayout.widget.ConstraintLayout>